Fix whitespace handling in diff
On the one hand, don't compare just words because that loses all the
whitespace changes so we cannot display the affected text; and on the
other hand fix the CSS so that it uses 'pre' instead of 'nowrap'.

--- a/Oddmuse/resources/css/default.css
+++ b/Oddmuse/resources/css/default.css
@@ -38,10 +38,10 @@ pre {
 
 /* Diff */
 
-.diff { white-space: nowrap; }
-.insert { background: #c1ffc1; padding: 2pt; }
+.insert, .delete { white-space: pre; padding: 2pt; }
+.insert { background: #c1ffc1; }
 .insert ins { background: #b4eeb4; }
-.delete { background: #ff82ab; padding: 2pt; }
+.delete { background: #ff82ab; }
 .delete del { background: #ee799f; }
 
 /* Changes */
